Fix spacing between card elements

--- a/style.css
+++ b/style.css
@@ -334,12 +334,14 @@ button:disabled {
   height: 288px;
   padding: 0;
   margin: 0;
+  flex: 1;
 }
 
 .project-header {
   width: 100%;
   height: 80px;
   padding: 0;
+  flex: 2;
 }
 
 .project-title {
@@ -388,12 +390,13 @@ button:disabled {
 .project-description {
   width: 100%;
   height: 76px;
-  margin: 12px 0;
+  margin: 30px 0;
   font-style: normal;
   font-weight: normal;
   font-size: 15px;
   line-height: 24px;
   color: #344563;
+  /* flex: 3; */
 }
 
 .tags {
@@ -403,6 +406,7 @@ button:disabled {
   width: 280px;
   height: 24px;
   list-style: none;
+  /* flex: 4; */
 }
 
 .tag-item {
@@ -926,7 +930,7 @@ button:disabled {
   }
 
   .project-description {
-    margin: 24px 0;
+    margin: 36px 0;
     font-size: 16px;
   }
 
